# ComfyUI-JoyCaption

./: JC.py  JC_GGUF.py  README.md  README_ZH.md  custom_models_example.json  jc_data.json  pyproject.toml  requirements.txt  requirements_gguf.txt  update.md
docs/: custom_models.md
