[project]
name = "ComfyUI-JoyCaption"
description = "Joy Caption is a ComfyUI node using the LLaVA model to generate stylized image captions, supporting batch processing and GGUF models."
version = "2.0.2"
license = {file = "LICENSE"}
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "huggingface_hub>=0.19.0",
    "accelerate",
    "bitsandbytes>=0.42.0",
    "Pillow>=10.0.0"
]

[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-JoyCaption"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-JoyCaption"
Icon = ""


